# wheel-of-fortune

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Resources/: arrow.lines  chair.lines  circle.lines  crown.lines  pushup.lines  scar.lines  skirt.lines  skull.lines  surprise.lines  wof.txt
Source/: Graphics.cpp  Graphics.h  LineObject.cpp  LineObject.h  WheelOfFortune.cpp  WheelOfFortune.h  main.cpp
